tests/fixtures/components/invalid-pure/request.blade.php
@pure

<div>
    Current URL: {{ request()->url() }}
</div>
